--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link rel="stylesheet" type="text/css" href="static/css/main.css" />
+		<link rel="stylesheet" type="text/css" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
@@ -26,19 +26,32 @@
 							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
 						</div>
 					</section>
-
+					
+						<li></li>
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Magna sed nullam nisl adipiscing</h2>
+							<h2>Make a prediction using our neural network</h2>
 						</header>
+						<ul class="actions">
+							<li><a href="/prediction" class="button">Prediction</a></li>
+							<li><a href="/about" class="button">About</a></li>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p><strong>L</strong> s</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
 
+				
+				
+				
 				<!-- Section -->
+
+
+
+
+
+
 					<section>
 						<header>
 							<h2>Feugiat consequat tempus ultrices</h2>
