--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="left"><img src="images/pic01.jpg" alt="" /></span>
 						</div>
 					</section>
 					
@@ -34,45 +34,52 @@
 							<h2>Make a prediction using our neural network</h2>
 						</header>
 						<ul class="actions">
-							<li><a href="/prediction" class="button">Prediction</a></li>
+							<li><a href="/prediction" class="button" width="500" height="500">Prediction</a></li>
 							<li><a href="/about" class="button">About</a></li>
-						<div class="content">
-							<p><strong>L</strong> s</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-						</div>
+						
+					  
+					
+						
 					</section>
 
 				
 				
 				
 				<!-- Section -->
+			</div>
+			<a href="https://github.com/gaben3722" class="social-icon si-rounded si-small si-linkedin">
+				<i class="icon-linkedin"></i>
+				<i class="icon-linkedin"></i>
+			 </a>
+			
+			
+			
+	
 
 
 
 
+					
+				
+			
 
-
-					<section>
-						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
-						</header>
-						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
-							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-code">Nibh amet venenatis</li>
-							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-						</div>
-					</section>
-
+				<div id="floatingNotification">
+				
+				</div>
 
 			</div>
-
+			<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<ul class="icons">
+						<li><a href="https://github.com/FT-Spotify-04/Spotify-Recommendation" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; Ft-Spotify-24 June 2021</li><li>Developed by:Minh Neguyen, Gabe Nosek, Justin Behringer, Jon Wright </li>
+					</ul>
+				</div>
+			</footer>
+	</div>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
