--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -85,7 +85,7 @@
 									<p></p>
 									<ul class="icons">
 										<li><a href="https://github.com/jbehringer95" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="https://www.linkedin.com/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://www.linkedin.com/in/justin-behringer-a1753a1b9/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								
 
