--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,13 +33,69 @@
 						<header>
 							<h2>Make a prediction using our neural network</h2>
 						</header>
-						<ul class="actions">
+						<div class="field half">
+							<input type="text" name="name" id="name" placeholder="Song name" />
+							<ul class="actions">
+								<li><input type="submit" value="Get Prediction" class="primary" /></li>
+							</ul>
+							<h3>YOUR RECOMMENDED SONGS</h3>
+                                        <h4>{{ song1 }}</h4>
+                                        <h4>{{ song2 }}</h4>
+                                        <h4>{{ song3 }}</h4>
+                                        <h4>{{ song4 }}</h4>
+                                        <h4>{{ song5 }}</h4>
+						</div>
+						<!-- <ul class="actions">
 							<li><a href="/prediction" class="button" width="500" height="500">Prediction</a></li>
-							<li><a href="/about" class="button">About</a></li>
+							<li><a href="/about" class="button">About</a></li> -->	
+					</section>
+					<section class="second">
+						<header>
+							<h2>About Us</h2>
+						</header>
+						<div>
+							We are a team of data scientists currently attending Lambda School, an intensive online data science 
+							course for a career in applied statistics and predictive modeling. 
+							Building real, ready-to-ship products with a team of other students generating real work experience 
+							is a key feature of Lambda School. 
+							This app is a product of that feature. 
+							<br /><br />
+							Gathering song data from Spotify we have built and trained a predictive model. 
+							This model allows a user to input a song they like and get find the top recomendations for that song.
+							The top recommended songs can be used to find a new favorite song or even help you reconnect with a past favorite.
+							 <br /><br />
 						
-					  
-					
+							<h4>Minh Nguyen</h4>
+							<p></p>	
+							<ul class="icons">
+								<li><a href="https://github.com/minh14496" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/minhnguyen496/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							</ul>
+							
+
+							<h4>Gabe Nosek</h4>	
+							<p></p>
+							<ul class="icons">
+								<li><a href="https://github.com/gaben3722" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/gabe-nosek-31431a174/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							</ul>
+
+
+							<h4>Justin Behringer</h4>
+							<p></p>
+							<ul class="icons">
+								<li><a href="https://github.com/jbehringer95" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/justin-behringer-a1753a1b9/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							</ul>
 						
+
+							<h4>Jon Wright</h4>
+							<p></p>
+							<ul class="icons">
+								<li><a href="https://github.com/jon-wright-b" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							</ul>
+						</div>
 					</section>
 
 				
@@ -51,17 +107,6 @@
 				<i class="icon-linkedin"></i>
 				<i class="icon-linkedin"></i>
 			 </a>
-			
-			
-			
-	
-
-
-
-
-					
-				
-			
 
 				<div id="floatingNotification">
 				
@@ -75,7 +120,7 @@
 						<li><a href="https://github.com/FT-Spotify-04/Spotify-Recommendation" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Ft-Spotify-24 June 2021</li><li>Developed by:Minh Neguyen, Gabe Nosek, Justin Behringer, Jon Wright </li>
+						<li>&copy; Ft-Spotify-24 June 2021</li><li>Developed by:Minh Nguyen, Gabe Nosek, Justin Behringer, Jon Wright </li>
 					</ul>
 				</div>
 			</footer>
